--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div style="display: flex;justify-content: space-evenly;">
+        <div id="clock"></div>
+        <div id="event"></div>
+        <div id="judge"></div>
+        <div id="judge1"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
