--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
         <div id="event"></div>
         <div id="judge"></div>
         <div id="judge1"></div>
+        <div id="nameForm"></div>
+        <div id="Calculator"></div>
     </div>
     <!--
       This HTML file is a template.
